# embody

./: .gitignore  ANNOTATION_CONFIGURATION.md  AUTHORS.md  README.md  README_COMPARABLES.md  README_FINDINGS.md  README_OUTLINE.md  RECENT_CHANGES.md  VISION_AND_PRD.md  package-lock.json  package.json  shadow-cljs.edn  tsup.config.ts  vitest.config.ts
.github/workflows/: pkg-pr-new.yml  pr-checks.yml  publish.yml
docs/: ADAPTER_TARGETS.md  HUMANOID_TEMPLATE_SKINNING_TDR.md
rust/embody-wasm/: Cargo.toml  LICENSE  README.md
rust/embody-wasm/src/: abi.rs  annotation_camera.rs  annotation_markers.rs  bones.rs  clip.rs  hair.rs  hair_curves.rs  humanoid_fit.rs  lib.rs  math.rs  profile.rs  profile_merge.rs  runtime.rs  skeleton.rs  template_fit_metadata.rs
scripts/: build-wasm.mjs  expose-cljs-main-export.mjs  extract-humanoid-skeleton-template.cjs  smoke-cljs-animation-runtime.mjs
scripts/bench/: runtime.mjs
scripts/smoke/: package-exports.mjs
src/: cljs.test.ts  cljs.ts  index.ts  wasm.ts  wasmTypes.ts
src-cljs/embody/: animation.cljs  entry.cljs  npm.cljs
src/authoring/: boneAuthoring.ts
src/camera/: annotationCameraAngles.test.ts  annotationCameraAngles.ts  cameraRelativeGaze.test.ts  cameraRelativeGaze.ts  rustAnnotationCameraCore.test.ts  rustAnnotationCameraCore.ts
src/core/: TsClipCompiler.test.ts  TsClipCompiler.ts  TsRuntimeCore.test.ts  TsRuntimeCore.ts  WasmRuntimeCore.test.ts  WasmRuntimeCore.ts  hostNeutralImports.test.ts  index.ts  types.ts
src/interfaces/: Animation.ts  EmbodyRuntime.ts  LoomLarge.ts  index.ts
types/: cljs.d.ts
(+95 files in other folders)
