[package]
name = "embody-wasm"
version = "0.0.0"
edition = "2021"
description = "Rust/Wasm acceleration core for Embody"
license = "MIT"
repository = "https://github.com/meekmachine/embody"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
